Added styles for almost everything

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <dd><data value="686.971">686.971 d</data></dd>
 
         <dt>Mean radius:</dt>
-        <dd><data value="3389.5">3389.5 km</data></dd>
+        <dd class="mean-radius"><data value="3389.5">3389.5 km</data></dd>
       </dl>
 
     <h3 id="venus">Venus</h3>
@@ -96,8 +96,8 @@
 
   </main>
 
-    <footer>
-      <h2 id="sources">Sources</h2>
+    <footer class="footer">
+      <h2 id="sources" class="sources">Sources</h2>
 
         <ol class="srcs">
           <li><cite><a href="https://en.wikipedia.org/wiki/Mars">Wikipedia: Mars</a></cite></li>
